// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENTS - <SnippetHeader> render SnippetHeader in edit mode 1`] = `
<SnippetHeader
  deleteFile={[MockFunction]}
  edit={true}
  file={
    Object {
      "filename": "somefile.js",
    }
  }
  snippetId="123123123123"
  tempSnippet={Object {}}
  updateTempSnippet={[MockFunction]}
  username="user"
>
  <SnippetHeaderWrapper>
    <div
      className="SnippetHeaderWrapper-cazcnY hiEhNI"
    >
      <FileName>
        <div
          className="FileName-gYMyOg dBkvLs"
        >
          <FilenameIcon
            color="#3F84A8"
            size={22}
            type="file"
          >
            <Icon
              className="FilenameIcon-glEJQV gnWsMJ"
              color="#3F84A8"
              size={22}
              type="file"
            >
              <span
                className="FilenameIcon-glEJQV gnWsMJ Icon-cFRQJw fERgeY"
                color="#3F84A8"
                size={22}
                type="file"
              />
            </Icon>
          </FilenameIcon>
           
          <Input
            onChange={[Function]}
          >
            <StyledInput
              disabled={false}
              onChange={[Function]}
              title=""
              type="text"
            >
              <input
                className="StyledInput-kKifnt NdlXS"
                disabled={false}
                onChange={[Function]}
                title=""
                type="text"
              />
            </StyledInput>
          </Input>
        </div>
      </FileName>
      <UtilityIcon
        color="tomato"
        onClick={[Function]}
        size={22}
        type="delete"
      >
        <Util
          color="tomato"
          onClick={[Function]}
        >
          <span
            className="Util-iuPPCj uhTl"
            color="tomato"
            onClick={[Function]}
          >
            <Icon
              color="tomato"
              size={22}
              type="delete"
            >
              <span
                className="Icon-cFRQJw dAYQoc"
                color="tomato"
                size={22}
                type="delete"
              />
            </Icon>
             
          </span>
        </Util>
      </UtilityIcon>
    </div>
  </SnippetHeaderWrapper>
</SnippetHeader>
`;

exports[`COMPONENTS - <SnippetHeader> render SnippetHeader in view mode 1`] = `
<SnippetHeader
  deleteFile={[MockFunction]}
  edit={false}
  file={
    Object {
      "filename": "somefile.js",
    }
  }
  snippetId="123123123123"
  tempSnippet={Object {}}
  updateTempSnippet={[MockFunction]}
  username="user"
>
  <SnippetHeaderWrapper>
    <div
      className="SnippetHeaderWrapper-cazcnY hiEhNI"
    >
      <FileName>
        <div
          className="FileName-gYMyOg dBkvLs"
        >
          <FilenameIcon
            color="#3F84A8"
            size={22}
            type="file"
          >
            <Icon
              className="FilenameIcon-glEJQV gnWsMJ"
              color="#3F84A8"
              size={22}
              type="file"
            >
              <span
                className="FilenameIcon-glEJQV gnWsMJ Icon-cFRQJw fERgeY"
                color="#3F84A8"
                size={22}
                type="file"
              />
            </Icon>
          </FilenameIcon>
           
          somefile.js
        </div>
      </FileName>
      <div>
        <Language>
          <span
            className="Language-kSngDe hZuUtn"
          >
            Plain text
          </span>
        </Language>
        <UtilityIcon
          color="#3F84A8"
          dropdown={true}
          size={22}
          type="ellipsis"
        >
          <Util
            color="#3F84A8"
            onClick={[Function]}
          >
            <span
              className="Util-iuPPCj fxQJsL"
              color="#3F84A8"
              onClick={[Function]}
            >
              <Icon
                color="#3F84A8"
                size={22}
                type="ellipsis"
              >
                <span
                  className="Icon-cFRQJw dFLpED"
                  color="#3F84A8"
                  size={22}
                  type="ellipsis"
                />
              </Icon>
               
            </span>
          </Util>
        </UtilityIcon>
        <UtilityIcon
          color="#3F84A8"
          onClick={[Function]}
          size={22}
          type="arrow-down"
        >
          <Util
            color="#3F84A8"
            onClick={[Function]}
          >
            <span
              className="Util-iuPPCj fxQJsL"
              color="#3F84A8"
              onClick={[Function]}
            >
              <Icon
                color="#3F84A8"
                size={22}
                type="arrow-down"
              >
                <span
                  className="Icon-cFRQJw kVFEWe"
                  color="#3F84A8"
                  size={22}
                  type="arrow-down"
                />
              </Icon>
               
            </span>
          </Util>
        </UtilityIcon>
      </div>
    </div>
  </SnippetHeaderWrapper>
</SnippetHeader>
`;
